[Compat] 优化代码